--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,28 @@
+body {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.Banner {
+  position: absolute;
+  font-size: x-large;
+  font-weight: bolder;
+  color: white;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
