--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,8 @@ body {
 
 .Banner {
   position: absolute;
+  padding: 25px;
+  border-radius: 3px;
   font-size: x-large;
   font-weight: bolder;
   color: white;
@@ -25,8 +27,63 @@ body {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  background-color: rgba(255, 255, 255, .15);
+  backdrop-filter: blur(5px);
 }
 
-#element-select {
-  display: none;
+.dropdown {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+  width: auto;
+  padding-right: 30px;
+}
+
+.dropdown::before {
+  position: absolute;
+  right: 5px;
+  top: 2px;
+  color: white;
+  margin-left: 5px;
+  font-size: small;
+  content: '▲';
+  transition: top 200ms ease-out;
+}
+
+.dropdown::after {
+  position: absolute;
+  right: 5px;
+  bottom: 2px;
+  color: white;
+  margin-left: 5px;
+  font-size: small;
+  content: '▼';
+  transition: bottom 200ms ease-out;
+}
+
+.dropdown--expanded::before {
+  top: -2px;
+}
+
+.dropdown--expanded::after {
+  bottom: -2px;
+}
+
+.dropdown__options {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.dropdown__item {
+  display: block;
+  text-align: start;
+  width: max-content;
+  overflow-y: visible;
+}
+
+.dropdown__item--selected {
+  position: relative;
+  width: auto;
 }
